--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="./css//styles.css" rel="stylesheet">
-    <title>WebStudio</title>
+    <title>WebStudio - Portfolio</title>
   </head>
   <body>
     <!-- Page header -->
@@ -18,8 +18,8 @@
       <nav class="navbar">
         <!-- Navigation to other pages -->
         <ul class="nav-list">
-          <li class="list-item"><a href="/" class="link active">Studio</a></li>
-          <li class="list-item"><a href="/portfolio.html" class="link" target="_blank">Portfolio</a></li>
+          <li class="list-item"><a href="/" class="link ">Studio</a></li>
+          <li class="list-item"><a href="/portfolio.html" class="link active" target="_blank">Portfolio</a></li>
           <li class="list-item"><a href="/Contacts" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
@@ -35,9 +35,24 @@
         </li>
       </ul>
     </header>
-    <div class="introduction">
-      <h1 class="title">effective solutions for <br> your business </h1>
-      <button type="button" class="btn btn-primary">Request our service</button>
+    <div class="portfolio-filter ">
+      <ul>
+      <li>
+      <button type="button" class="btn active">All</button>
+      </li>
+      <li>
+        <button type="button" class="btn ">Web-sites</button>
+        </li>
+      <li>
+        <button type="button" class="btn ">Apps</button>
+        </li>
+      <li>
+        <button type="button" class="btn ">Design</button>
+        </li>
+      <li>
+        <button type="button" class="btn ">Marketing</button>
+        </li>
+      </ul>
     </div>
     <section >
       <ul>
