--- a/index.html
+++ b/index.html
@@ -13,57 +13,61 @@
   <body>
     <!-- Page header -->
     <header class="header">
-      <a href="/" class="logo">WebStudio</a>
 
       <nav class="navbar">
         <!-- Navigation to other pages -->
+      <a href="./index.html" class="logo">WebStudio</a>
+
         <ul class="nav-list">
-          <li class="list-item"><a href="/" class="link active">Studio</a></li>
+          <li class="list-item"><a href="#" class="link active">Studio</a></li>
           <li class="list-item"><a href="/portfolio.html" class="link" target="_blank">Portfolio</a></li>
           <li class="list-item"><a href="/Contacts" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
       <ul class="contact-list">
-        <li>
-          <!-- Link to phone number -->
-          <a href="tel:+12127724150">+1 212 772-41-50</a>
-        </li>
+      
 
         <li>
           <!-- Link to email address  -->
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
+        <li>
+          <!-- Link to phone number -->
+          <a href="tel:+12127724150">+1 212 772-41-50</a>
+        </li>
       </ul>
     </header>
-    <div class="introduction">
+    <main>
+
+    <section class="introduction">
       <h1 class="title">effective solutions for <br> your business </h1>
       <button type="button" class="btn btn-primary">Request our service</button>
-    </div>
+    </section>
     <section >
       <ul>
         <li>
-          <b>ATTENTION TO DETAILS</b>
+          <h3>ATTENTION TO DETAILS</h3>
           <p>
             We go into all the details and processes of your business to develop
             a customized solution.
           </p>
         </li>
         <li>
-          <b>PUNCTUALITY</b>
+          <h3>PUNCTUALITY</h3>
           <p>
             With us, you can feel safe and secure. An important principle of the
             company: respect your time and respect the agreed deadlines.
           </p>
         </li>
         <li>
-          <b>PLANNING</b>
+          <h3>PLANNING</h3>
           <p>
             You will be able to observe and participate in every phase of
             solution development and implementation.
           </p>
         </li>
         <li>
-          <b>MODERN TECHNOLOGIES</b>
+          <h3>MODERN TECHNOLOGIES</h3>
           <p>
             We use innovative tools to solve assigned taskd. it's time to
             simplify work processes.
@@ -78,21 +82,21 @@
           <img
             src="images/about/about3.jpg"
             alt="Typing on a keyboard"
-            width="370"
+            width="270"
           />
         </li>
         <li>
           <img
             src="images/about/about1.jpg"
             alt="Typing on a keyboard and holding a phone"
-            width="370"
+            width="270"
           />
         </li>
         <li>
           <img
             src="images/about/about2.jpg"
             alt="holding an ipad and picking color "
-            width="370"
+            width="270"
           />
         </li>
       </ul>
@@ -105,59 +109,55 @@
             <img
               src="images/team/team3.jpg"
               alt="Team member male"
-              width="370"
+              width="270"
             />
           </a>
           <div class="team-info">
-            <p class="name">Cristopher Walker</p>
+            <h3 class="name">Cristopher Walker</h3>
             <p class="job">Product Designer</p>
           </div>
           
         </li>
         <li>
-          <a href="#">
             <img
               src="images/team/team1.jpg"
               alt="Team member Female"
-              width="370"
+              width="270"
             />
-          </a>
           <div class="team-info">
-            <p class="name">Kylie Evans</p>
+            <h3 class="name">Kylie Evans</h3>
             <p class="job">Forntend Developer</p>
           </div>
         </li>
         <li>
-          <a href="#">
             <img
               src="images/team/team4.jpg"
               alt="Team member Male"
-              width="370"
+              width="270"
             />
-          </a>
           <div class="team-info">
-            <p class="name">Rayan Harris</p>
+            <h3 class="name">Rayan Harris</h3>
             <p class="job">Marketing</p>
           </div>
         </li>
         <li>
-          <a href="#">
             <img
               src="images/team/team2.jpg"
               alt="Team member Male"
-              width="370"
+              width="270"
             />
-          </a>
           <div class="team-info">
-            <p class="name">Tyler Moore</p>
+            <h3 class="name">Tyler Moore</h3>
             <p class="job">UI Designer</p>
           </div>
         </li>
       </ul>
     </section>
+  </main>
+
     <!-- Page footer -->
     <footer class="footer">
-      <a href="/" class="logo"> WebStudio</a>
+      <a href="./index.html" class="logo"> WebStudio</a>
       <address class="address">
         <ul>
           <li>
