--- a/portfolio.html
+++ b/portfolio.html
@@ -13,28 +13,31 @@
   <body>
     <!-- Page header -->
     <header class="header">
-      <a href="/" class="logo">WebStudio</a>
 
       <nav class="navbar">
         <!-- Navigation to other pages -->
+      <a href="./index.html" class="logo">WebStudio</a>
+
         <ul class="nav-list">
-          <li class="list-item"><a href="/" class="link ">Studio</a></li>
+          <li class="list-item"><a href="#" class="link ">Studio</a></li>
           <li class="list-item"><a href="/portfolio.html" class="link active" target="_blank">Portfolio</a></li>
-          <li class="list-item"><a href="/Contacts" class="link" target="_blank" >Contacts</a></li>
+          <li class="list-item"><a href="#" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
       <ul class="contact-list">
+       
+        <li>
+          <!-- Link to email address  -->
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
         <li>
           <!-- Link to phone number -->
           <a href="tel:+12127724150">+1 212 772-41-50</a>
         </li>
 
-        <li>
-          <!-- Link to email address  -->
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
       </ul>
     </header>
+    <main>
     <div class="portfolio-filter ">
       <ul>
       <li>
@@ -170,6 +173,7 @@
         </li>
       </ul>
     </section>
+  </main>
     <!-- Page footer -->
     <footer class="footer">
       <a href="/" class="logo"> WebStudio</a>
