--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         <ul class="nav-list">
           <li class="list-item"><a href="#" class="link active">Studio</a></li>
-          <li class="list-item"><a href="/portfolio.html" class="link" target="_blank">Portfolio</a></li>
-          <li class="list-item"><a href="/Contacts" class="link" target="_blank" >Contacts</a></li>
+          <li class="list-item"><a href="./portfolio.html" class="link" target="_blank">Portfolio</a></li>
+          <li class="list-item"><a href="#" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
       <ul class="contact-list">
@@ -105,13 +105,11 @@
       <h2>Our team</h2>
       <ul>
         <li>
-          <a href="#">
             <img
               src="images/team/team3.jpg"
               alt="Team member male"
               width="270"
             />
-          </a>
           <div class="team-info">
             <h3 class="name">Cristopher Walker</h3>
             <p class="job">Product Designer</p>
