--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
       <a href="./index.html" class="logo">WebStudio</a>
 
         <ul class="nav-list">
-          <li class="list-item"><a href="#" class="link ">Studio</a></li>
-          <li class="list-item"><a href="/portfolio.html" class="link active" target="_blank">Portfolio</a></li>
+          <li class="list-item"><a href="./index.html" class="link ">Studio</a></li>
+          <li class="list-item"><a href="./portfolio.html" class="link active" target="_blank">Portfolio</a></li>
           <li class="list-item"><a href="#" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
@@ -28,11 +28,11 @@
        
         <li>
           <!-- Link to email address  -->
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
           <!-- Link to phone number -->
-          <a href="tel:+12127724150">+1 212 772-41-50</a>
+          <a href="tel:+12127724150" class="link">+1 212 772-41-50</a>
         </li>
 
       </ul>
@@ -57,118 +57,120 @@
         </li>
       </ul>
     </div>
-    <section >
-      <ul>
-        <li>
-          <b>ATTENTION TO DETAILS</b>
-          <p>
-            We go into all the details and processes of your business to develop
-            a customized solution.
-          </p>
-        </li>
-        <li>
-          <b>PUNCTUALITY</b>
-          <p>
-            With us, you can feel safe and secure. An important principle of the
-            company: respect your time and respect the agreed deadlines.
-          </p>
-        </li>
-        <li>
-          <b>PLANNING</b>
-          <p>
-            You will be able to observe and participate in every phase of
-            solution development and implementation.
-          </p>
-        </li>
-        <li>
-          <b>MODERN TECHNOLOGIES</b>
-          <p>
-            We use innovative tools to solve assigned taskd. it's time to
-            simplify work processes.
-          </p>
-        </li>
-      </ul>
     </section>
-    <section class="about">
-      <h2>What we do</h2>
-      <ul>
-        <li>
-          <img
-            src="images/about/about3.jpg"
-            alt="Typing on a keyboard"
-            width="370"
-          />
-        </li>
-        <li>
-          <img
-            src="images/about/about1.jpg"
-            alt="Typing on a keyboard and holding a phone"
-            width="370"
-          />
-        </li>
-        <li>
-          <img
-            src="images/about/about2.jpg"
-            alt="holding an ipad and picking color "
-            width="370"
-          />
-        </li>
-      </ul>
-    </section>
-    <section class="about team">
-      <h2>Our team</h2>
-      <ul>
-        <li>
-          <a href="#">
+    <section class="portfolio ">
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
             <img
-              src="images/team/team3.jpg"
-              alt="Team member male"
+              src="images/portfolio/portfolio-1.jpg"
+              alt="portfolio Technoduck-website picture"
               width="370"
+              height="294"
             />
-          </a>
-          <div class="team-info">
-            <p class="name">Cristopher Walker</p>
-            <p class="job">Product Designer</p>
+          <div class="info">
+            <h3 class="name">Technoduck </h3>
+            <p class="category">Web-site </p>
           </div>
           
         </li>
         <li>
           <a href="#">
             <img
-              src="images/team/team1.jpg"
-              alt="Team member Female"
+              src="images/portfolio/portfolio-2.jpg"
+              alt="portfolio poster picture"
               width="370"
+              height="294"
             />
           </a>
-          <div class="team-info">
-            <p class="name">Kylie Evans</p>
-            <p class="job">Forntend Developer</p>
+          <div class="info">
+            <h3 class="name">Poster New Orlean vs Golden Star </h3>
+            <p class="category">Design </p>
           </div>
         </li>
         <li>
           <a href="#">
             <img
-              src="images/team/team4.jpg"
-              alt="Team member Male"
+              src="images/portfolio/portfolio-3.jpg"
+              alt="portfolio seafood Restaurant picture"
               width="370"
+              height="294"
             />
           </a>
-          <div class="team-info">
-            <p class="name">Rayan Harris</p>
-            <p class="job">Marketing</p>
+          <div class="info">
+            <h3 class="name">Seafood Restaurant  </h3>
+            <p class="category">Apps</p>
           </div>
         </li>
         <li>
-          <a href="#">
             <img
-              src="images/team/team2.jpg"
-              alt="Team member Male"
+              src="images/portfolio/portfolio-4.jpg"
+              alt="portfolio Marketing project"
               width="370"
+              height="294"
             />
-          </a>
-          <div class="team-info">
-            <p class="name">Tyler Moore</p>
-            <p class="job">UI Designer</p>
+          <div class="info">
+            <h3 class="name">Project Prime </h3>
+            <p class="category">Marketing </p>
+          </div>
+        </li>
+        <li>
+            <img
+              src="images/portfolio/portfolio-5.jpg"
+              alt="portfolio Project Boxes"
+              width="370"
+              height="294"
+            />
+          <div class="info">
+            <h3 class="name">Project Boxes</h3>
+            <p class="category">Apps </p>
+          </div>
+        </li>
+        <li>
+            <img
+              src="images/portfolio/portfolio-6.jpg"
+              alt="portfolio Web-site picture"
+              width="370"
+              height="294"
+            />
+          <div class="info">
+            <h3 class="name">Inspiration has no Borders</h3>
+            <p class="category">Web-site</p>
+          </div>
+        </li>
+        <li>
+            <img
+              src="images/portfolio/portfolio-7.jpg"
+              alt="portfolio Design picture  "
+              width="370"
+              height="294"
+            />
+          <div class="info">
+            <h3 class="name">Limited Edition</h3>
+            <p class="category">Design</p>
+          </div>
+        </li>
+        <li>
+            <img
+              src="images/portfolio/portfolio-8.jpg"
+              alt="portfolio Marketing picture"
+              width="370"
+              height="294"
+            />
+          <div class="info">
+            <h3 class="name">Project LAB</h3>
+            <p class="category">Marketing</p>
+          </div>
+        </li>
+        <li>
+            <img
+              src="images/portfolio/portfolio-9.jpg"
+              alt="portfolio Apps picture"
+              width="370"
+              height="294"
+            />
+          <div class="info">
+            <h3 class="name">Growing Business</h3>
+            <p class="category">Apps </p>
           </div>
         </li>
       </ul>
@@ -176,7 +178,7 @@
   </main>
     <!-- Page footer -->
     <footer class="footer">
-      <a href="/" class="logo"> WebStudio</a>
+      <a href="./index.html" class="logo"> WebStudio</a>
       <address class="address">
         <ul>
           <li>
@@ -186,10 +188,10 @@
             /></a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+12127724150">+1 212 772-41-50</a>
+            <a href="tel:+12127724150" class="contact">+1 212 772-41-50</a>
           </li>
         </ul>
       </address>
