--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <ul class="nav-list">
           <li class="list-item"><a href="#" class="link active">Studio</a></li>
-          <li class="list-item"><a href="./portfolio.html" class="link" target="_blank">Portfolio</a></li>
+          <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
           <li class="list-item"><a href="#" class="link" target="_blank" >Contacts</a></li>
         </ul>
       </nav>
@@ -29,54 +29,54 @@
 
         <li>
           <!-- Link to email address  -->
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
           <!-- Link to phone number -->
-          <a href="tel:+12127724150">+1 212 772-41-50</a>
+          <a href="tel:+12127724150" class="link">+1 212 772-41-50</a>
         </li>
       </ul>
     </header>
     <main>
 
-    <section class="introduction">
+    <section class="section introduction">
       <h1 class="title">effective solutions for <br> your business </h1>
       <button type="button" class="btn btn-primary">Request our service</button>
     </section>
-    <section >
+    <section class="section ">
       <ul>
         <li>
-          <h3>ATTENTION TO DETAILS</h3>
-          <p>
+          <h3 class="sction-sub-title">ATTENTION TO DETAILS</h3>
+          <p class="description">
             We go into all the details and processes of your business to develop
             a customized solution.
           </p>
         </li>
         <li>
-          <h3>PUNCTUALITY</h3>
-          <p>
+          <h3 class="sction-sub-title">PUNCTUALITY</h3>
+          <p class="description">
             With us, you can feel safe and secure. An important principle of the
             company: respect your time and respect the agreed deadlines.
           </p>
         </li>
         <li>
-          <h3>PLANNING</h3>
-          <p>
+          <h3 class="sction-sub-title">PLANNING</h3>
+          <p class="description">
             You will be able to observe and participate in every phase of
             solution development and implementation.
           </p>
         </li>
         <li>
-          <h3>MODERN TECHNOLOGIES</h3>
-          <p>
+          <h3 class="sction-sub-title">MODERN TECHNOLOGIES</h3>
+          <p class="description">
             We use innovative tools to solve assigned taskd. it's time to
             simplify work processes.
           </p>
         </li>
       </ul>
     </section>
-    <section class="about">
-      <h2>What we do</h2>
+    <section class=" section about">
+      <h2 class="section-title">What we do</h2>
       <ul>
         <li>
           <img
@@ -101,8 +101,8 @@
         </li>
       </ul>
     </section>
-    <section class="about team">
-      <h2>Our team</h2>
+    <section class=" section about team">
+      <h2 class="section-title">Our team</h2>
       <ul>
         <li>
             <img
@@ -155,23 +155,24 @@
 
     <!-- Page footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"> WebStudio </a>
+      <a href="./index.html" class="logo link"> WebStudio</a>
       <address class="address">
         <ul>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               695 Park Ave, New York, NY 10065, <br />
               United States <br
             /></a>
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+12127724150">+1 212 772-41-50</a>
+            <a href="tel:+12127724150" class="contact link">+1 212 772-41-50</a>
           </li>
         </ul>
       </address>
+    </footer>
     </footer>
   </body>
 </html>
