--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav-list">
           <li class="list-item"><a href="#" class="link active">Studio</a></li>
           <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li class="list-item"><a href="#" class="link" target="_blank" >Contacts</a></li>
+          <li class="list-item"><a href="#" class="link"  >Contacts</a></li>
         </ul>
       </nav>
       <ul class="contact-list">
