--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="./index.html" class="logo">WebStudio</a>
 
         <ul class="nav-list">
-          <li class="list-item"><a href="#" class="link active">Studio</a></li>
+          <li class="list-item"><a href="./index.html" class="link active">Studio</a></li>
           <li class="list-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
           <li class="list-item"><a href="#" class="link"  >Contacts</a></li>
         </ul>
@@ -82,21 +82,21 @@
           <img
             src="images/about/about3.jpg"
             alt="Typing on a keyboard"
-            width="270"
+            width="370"
           />
         </li>
         <li>
           <img
             src="images/about/about1.jpg"
             alt="Typing on a keyboard and holding a phone"
-            width="270"
+            width="370"
           />
         </li>
         <li>
           <img
             src="images/about/about2.jpg"
             alt="holding an ipad and picking color "
-            width="270"
+            width="370"
           />
         </li>
       </ul>
@@ -111,8 +111,8 @@
               width="270"
             />
           <div class="team-info">
-            <h3 class="name">Cristopher Walker</h3>
-            <p class="job">Product Designer</p>
+            <h3 class="team-name">Cristopher Walker</h3>
+            <p class="team-job">Product Designer</p>
           </div>
           
         </li>
@@ -123,8 +123,8 @@
               width="270"
             />
           <div class="team-info">
-            <h3 class="name">Kylie Evans</h3>
-            <p class="job">Forntend Developer</p>
+            <h3 class="team-name">Kylie Evans</h3>
+            <p class="team-job">Forntend Developer</p>
           </div>
         </li>
         <li>
@@ -134,8 +134,8 @@
               width="270"
             />
           <div class="team-info">
-            <h3 class="name">Rayan Harris</h3>
-            <p class="job">Marketing</p>
+            <h3 class="team-name">Rayan Harris</h3>
+            <p class="team-job">Marketing</p>
           </div>
         </li>
         <li>
@@ -145,8 +145,8 @@
               width="270"
             />
           <div class="team-info">
-            <h3 class="name">Tyler Moore</h3>
-            <p class="job">UI Designer</p>
+            <h3 class="team-name">Tyler Moore</h3>
+            <p class="team-job">UI Designer</p>
           </div>
         </li>
       </ul>
@@ -173,6 +173,6 @@
         </ul>
       </address>
     </footer>
-    </footer>
+   
   </body>
 </html>
