--- a/portfolio.html
+++ b/portfolio.html
@@ -38,27 +38,30 @@
       </ul>
     </header>
     <main>
-    <div class="portfolio-filter ">
-      <ul>
-      <li>
-      <button type="button" class="btn active">All</button>
-      </li>
-      <li>
-        <button type="button" class="btn ">Web-sites</button>
-        </li>
-      <li>
-        <button type="button" class="btn ">Apps</button>
-        </li>
-      <li>
-        <button type="button" class="btn ">Design</button>
-        </li>
-      <li>
-        <button type="button" class="btn ">Marketing</button>
-        </li>
-      </ul>
-    </div>
-    </section>
+   
+  
     <section class="portfolio ">
+      <!-- filter buttons -->
+      <div class="portfolio-filter ">
+        <ul>
+        <li>
+        <button type="button" class="btn btn-filter active">All</button>
+        </li>
+        <li>
+          <button type="button" class="btn btn-filter ">Web-sites</button>
+          </li>
+        <li>
+          <button type="button" class="btn btn-filter">Apps</button>
+          </li>
+        <li>
+          <button type="button" class="btn btn-filter">Design</button>
+          </li>
+        <li>
+          <button type="button" class="btn btn-filter ">Marketing</button>
+          </li>
+        </ul>
+      </div>
+      <!--  filter pictures -->
       <ul class="portfolio-list">
         <li class="portfolio-item">
             <img
@@ -67,9 +70,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Technoduck </h3>
-            <p class="category">Web-site </p>
+          <div class="project-info">
+            <h3 class="project-name">Technoduck </h3>
+            <p class="project-category">Web-site </p>
           </div>
           
         </li>
@@ -82,9 +85,9 @@
               height="294"
             />
           </a>
-          <div class="info">
-            <h3 class="name">Poster New Orlean vs Golden Star </h3>
-            <p class="category">Design </p>
+          <div class="project-info">
+            <h3 class="project-name">Poster New Orlean vs Golden Star </h3>
+            <p class="project-category">Design </p>
           </div>
         </li>
         <li>
@@ -96,9 +99,9 @@
               height="294"
             />
           </a>
-          <div class="info">
-            <h3 class="name">Seafood Restaurant  </h3>
-            <p class="category">Apps</p>
+          <div class="project-info">
+            <h3 class="project-name">Seafood Restaurant  </h3>
+            <p class="project-category">Apps</p>
           </div>
         </li>
         <li>
@@ -108,9 +111,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Project Prime </h3>
-            <p class="category">Marketing </p>
+          <div class="project-info">
+            <h3 class="project-name">Project Prime </h3>
+            <p class="project-category">Marketing </p>
           </div>
         </li>
         <li>
@@ -120,9 +123,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Project Boxes</h3>
-            <p class="category">Apps </p>
+          <div class="project-info">
+            <h3 class="project-name">Project Boxes</h3>
+            <p class="project-category">Apps </p>
           </div>
         </li>
         <li>
@@ -132,9 +135,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Inspiration has no Borders</h3>
-            <p class="category">Web-site</p>
+          <div class="project-info">
+            <h3 class="project-name">Inspiration has no Borders</h3>
+            <p class="project-category">Web-site</p>
           </div>
         </li>
         <li>
@@ -144,9 +147,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Limited Edition</h3>
-            <p class="category">Design</p>
+          <div class="project-info">
+            <h3 class="project-name">Limited Edition</h3>
+            <p class="project-category">Design</p>
           </div>
         </li>
         <li>
@@ -156,9 +159,9 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Project LAB</h3>
-            <p class="category">Marketing</p>
+          <div class="project-info">
+            <h3 class="project-name">Project LAB</h3>
+            <p class="project-category">Marketing</p>
           </div>
         </li>
         <li>
@@ -168,33 +171,34 @@
               width="370"
               height="294"
             />
-          <div class="info">
-            <h3 class="name">Growing Business</h3>
-            <p class="category">Apps </p>
+          <div class="project-info">
+            <h3 class="project-name">Growing Business</h3>
+            <p class="project-category">Apps </p>
           </div>
         </li>
       </ul>
     </section>
   </main>
     <!-- Page footer -->
-    <footer class="footer">
-      <a href="./index.html" class="logo"> WebStudio</a>
-      <address class="address">
-        <ul>
-          <li>
-            <a href="#">
-              695 Park Ave, New York, NY 10065, <br />
-              United States <br
-            /></a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+12127724150" class="contact">+1 212 772-41-50</a>
-          </li>
-        </ul>
-      </address>
-    </footer>
+   <!-- Page footer -->
+   <footer class="footer">
+    <a href="./index.html" class="logo link"> WebStudio</a>
+    <address class="address">
+      <ul>
+        <li>
+          <a href="#" class="link">
+            695 Park Ave, New York, NY 10065, <br />
+            United States <br
+          /></a>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+12127724150" class="contact link">+1 212 772-41-50</a>
+        </li>
+      </ul>
+    </address>
+  </footer>
   </body>
 </html>
